# chatgpt_prompt_developer_course

./: README.md  env-example  i2-04-inferring.ipynb  i2_01_guidelines.ipynb  i2_02_iterative_prompt_development.ipynb  i2_03_summarizing.ipynb  i2_05-transforming.ipynb  i2_06_expanding.ipynb  i2_07_chatbots.ipynb  pyproject.toml
