[tool.pdm]

[project]
name = "chatgpt_prompt"
version = "0.1.0"
description = "Using better prompting in ChatGPT using python"
authors = [
    {name = "Gabriel Martin del Campo y Eternod", email = "gmartindelcye@gmail.com"},
]
dependencies = [
    "openai>=0.27.6",
    "python-dotenv>=1.0.0",
    "jupyterlab>=3.6.3",
    "voila>=0.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
